--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,9 @@ nms.compile_v1_16=true
 nms.compile_v1_17=true
 nms.compile_v1_18=true
 nms.compile_v1_19=true
-hook.compile_chunkcollectors=true
+hook.compile_chunkcollectors=false
 hook.compile_chunkhoppers=true
-hook.compile_cmi=true
+hook.compile_cmi=false
 hook.compile_economyshopgui=true
 hook.compile_essentials215=true
 hook.compile_essentials216=true
@@ -22,20 +22,20 @@ hook.compile_factionsuuid05=true
 hook.compile_factionsx=true
 hook.compile_griefprevention=true
 hook.compile_guishop=true
-hook.compile_lands=true
+hook.compile_lands=false
 hook.compile_massivefactions=true
-hook.compile_mcmmo1=true
-hook.compile_mcmmo2=true
+hook.compile_mcmmo1=false
+hook.compile_mcmmo2=false
 hook.compile_mergedspawner=true
 hook.compile_newtshop=true
-hook.compile_quantumshop=true
-hook.compile_residence=true
+hook.compile_quantumshop=false
+hook.compile_residence=false
 hook.compile_rosestacker=true
 hook.compile_savagefactions=true
-hook.compile_shopguiplus=true
+hook.compile_shopguiplus=false
 hook.compile_silkspawners5=true
 hook.compile_silkspawners6=true
-hook.compile_supermobcoins=true
+hook.compile_supermobcoins=false
 hook.compile_towny=true
 hook.compile_vault=true
 hook.compile_villagers=true
